--- a/content/blog/2019-08-14-ra-podcast-rankings.Rmd
+++ b/content/blog/2019-08-14-ra-podcast-rankings.Rmd
@@ -3,7 +3,8 @@ title: Resident Advisor podcast appearance rankings
 description: "Who features the most in RA's longstanding mix series?"
 date: '2019-08-14'
 slug: ra-podcast-rankings
-tags: ['music', 'open-data']
+tags: ['resident-advisor', 'open-data']
+keywords: ["resident advisor", "ra", "podcast", "mix series", "open data"]
 image: "http://www.fazemag.de/wp-content/uploads/2015/12/Bildschirmfoto-2015-12-26-um-21.32.43.png"
 draft: no
 ---
@@ -24,7 +25,7 @@ pacman::p_load("tidyverse", "htmltools", "ghibli")
 
 ```
 
-[Resident Advisor](https://www.residentadvisor.net/) (RA) have run a (roughly) weekly [podcast mix series](https://www.residentadvisor.net/podcast.aspx) since late 2010 (and still going strong). Each edition sees a new artist sequence a mix, growing a vital cultural artefact which does a good job of tracking the state of 'underground' electronic music. I've been tuning in for a long time, and got to wondering which artists have been featured most prominently throughout the archives.
+[Resident Advisor](https://www.residentadvisor.net/) (RA) have run a (roughly) weekly [podcast mix series](https://www.residentadvisor.net/podcast.aspx) since late 2010 (and still going strong). Each edition sees a new artist sequence a mix. I've been tuning in for a long time, and got to wondering which artists have been featured most prominently throughout the archives.
 
 [MixesDB](https://www.mixesdb.com/w/Main_Page) is the self-proclaimed "database for DJ sets, podcasts, radio shows and more". Over there, fans can enter metadata for mixes, including tracklists (i.e. which tracks were played). There's even an [RA Podcast section](https://www.mixesdb.com/w/Category:Resident_Advisor_Podcast), which means that tracks played within mixes in this series are collated in one place (albeit with some missing data). This would help cure my curiosity.  
 
@@ -57,6 +58,8 @@ top_tracks <- tracklists %>%
 ```
 
 Nonetheless, I dug into the RA Podcast data to find out who's appeared in the most mixes to date. Below is the top ~200 artists according to this metric.[^fullcode]
+
+<br>
 
 ```{r rankings-tbl}
 
@@ -155,9 +158,9 @@ div(class = "rankings",
 }
 ```
 
-<br>
+It's a big look for Detroit, then, with the Motor City putting up both #1 (Robert Hood) and #2 (Omar S). Here's a personal fave from Rob to ride out on...
 
-It's a big look for Detroit, then, with the Motor City putting up both #1 (Robert Hood) and #2 (Omar S). Here's a personal fave from Rob to ride out on `r emo::ji("heart_eyes")` `r emo::ji("heart_eyes")`
+<br>
 
 ```{r, eval=TRUE}
 blogdown::shortcode("youtube", "yRBJDJx_sjg")
